comit-ajuste-resultado

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </aside>
 
         <h2 id="result">&#x1F60D;</h2>
+        <h3 id="result-text">bem vindo ao Jokenpô</h3>
         <p id="pontuacao-human"> sua pontuação: <span id="ponctuation-Human">0</span></p>
         <p id="pontuacao-machine"> pontuação da alexa: <span id="ponctuation-Machine">0</span></p>
     </section>
